--- a/css/colors.css
+++ b/css/colors.css
@@ -2,7 +2,6 @@
     --color-primary: #6200EEFF;
     --color-primary-hover-transparent: #6200EE11;
     --color-primary-hover: #6F14EFFF;
-    --color-transparent: #00000000;
     --color-input-background: #e8e8e8FF;
 
     --color-text-on-primary: #FFFFFFFF;
